[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interficie.gd" type="Script" id=1]
[ext_resource path="res://bodoni/BodoniFLF-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bodoni/BodoniFLF-Roman.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 75
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
font_data = ExtResource( 3 )

[node name="Interficie" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Puntuacio" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_right = 72.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Misatge" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -182.0
margin_right = 216.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "SPACE SHIP "
align = 1
valign = 1

[node name="Boto" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -191.0
margin_right = 71.0
margin_bottom = -118.0
custom_fonts/font = SubResource( 3 )
text = "JUGAR"

[node name="MisatgeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="Boto" to="." method="_on_Boto_pressed"]
[connection signal="timeout" from="MisatgeTimer" to="." method="_on_MisatgeTimer_timeout"]
